@@ -57,6 +57,7 @@ cmake $(VISTA_TESTING_SOURCE_DIR)   \
 -DVISTA_ROUTINE_DIR:PATH=$(VISTA_ROUTINES_DIR) \
 -DGTM_DIST:PATH=$(GTM_INSTALL_DIR) \
 -DGTM_SOURCE_DIR:STRING=$(VISTA_GTM_ROUTINES) \
+-DCMAKE_LIBRARY_OUTPUT_DIRECTORY:PATH=$(VISTA_LIBRARY_DIR) \
 -DTEST_VISTA:BOOL=ON \
 -DTEST_VISTA_SETUP:BOOL=ON \
 -DTEST_VISTA_FRESH:BOOL=ON \
@@ -79,7 +80,10 @@ cd $(VISTA_TESTING_BINARY_DIR) && make)
 
 override_dh_auto_install:
 	mkdir -p debian/$(BINPKG)/$(DESTINATION_DIR)
-	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR) debian/$(BINPKG)/$(DESTINATION_DIR)
+	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/r    debian/$(BINPKG)/$(DESTINATION_DIR)
+	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/g    debian/$(BINPKG)/$(DESTINATION_DIR)
+	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/lib  debian/$(BINPKG)/$(DESTINATION_DIR)
+	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/inet debian/$(BINPKG)/$(DESTINATION_DIR)
 
 
 get-orig-source:
