@@ -33,5 +33,6 @@ vista-foia (0.20140106-1) UNRELEASED; urgency=low
   * In rules, remove code to compile .m files. Now moved to CMake itself.
   * In rules, added final installation rule. Targeting debuild expected dir.
   * Added CMake option to precompile all M routines, as part of build.
+  * In rules, only installing selected directories. Skipping .o files. 
 
  -- Luis Ibanez <luis.ibanez@kitware.com>  Wed, 4 Jul 2012 17:16:45 -0500
